--- a/dream-big-think-small/slides.html
+++ b/dream-big-think-small/slides.html
@@ -22,7 +22,7 @@
 				<span id="death-text" class="x very-big speed2">Death<b>:</b></span>
 				<div class="x delay2 speed2">the mother of all usability problems<b>.</b></div>
 			</div></li>
-			<li id="future-slide" class="dark"><div>
+			<li id="future-slide" class="dark preserve"><div>
 				<div id="flying-bombers" class="cover"></div>
 				<div style="position:relative;" class="big">A future in the balance.</div>
 			</div></li>
@@ -159,7 +159,7 @@
 			</div></li>
 			<li class="dark slidein"><div>
 				<img class="z1 black-n-white case-study-logo" src="google-maps.png" style="margin-left: 400px; float: left;" />
-				<div class="z2" style="position: relative; left: 50px; float: left; text-align: left;">
+				<div class="z2" style="position: relative; left: 30px; float: left; text-align: left;">
 					UNIVERSAL<br/>INFORMATION<br/>ACCESSIBILITY
 				</div>
 				<div style="clear:both; float:none;"></div>
@@ -167,7 +167,7 @@
 			<li class="dark slidein"><div>
 				<div class="cover black-n-white" style="background-image:url(mpesa.jpg); opacity: 0.2"></div>
 				<img class="z1 black-white case-study-logo" src="mpesa-logo.jpg" style="margin-left: 400px; float: left;" />
-				<div class="z2" style="position: relative; left: 50px; float:left; text-align: left;">
+				<div class="z2" style="position: relative; left: 30px; float:left; text-align: left;">
 					UNIVERSAL<br/>BANKING<br/>ACCESSIBILITY
 				</div>
 				<div style="clear:both; float:none;"></div>
@@ -180,7 +180,7 @@
 					( Photo: John Stanmeyer, USA, VII for National Geographic )
 				</div>
 			</div></li>
-			<li id="video_slide" data-on-enter="video_enter" class="dark fadein"><div>
+			<li id="video_slide" data-on-enter="video_enter" class="dark fadein preserve"><div>
 				<div id="video" class="cover"></div>
 				<div style="position: relative">
 					<img src="battery.svg" class="x delay1" style="margin-right: 50px;" />
@@ -188,7 +188,7 @@
 					<img src="pin.svg"     class="x delay3" style="height: 70px;" />
 				</div>
 			</div></li>
-			<li class="fadein"><div>
+			<li class="fadein preserve"><div>
 				<div class="delay1 speed2" style="position: absolute; width:
 					100%; margin-top: -20px;">
 					<span class="x" style="-webkit-animation-delay:0.1s;">“Every</span>
@@ -200,13 +200,13 @@
 					<span class="x" style="-webkit-animation-delay:2.4s;">— @JonBruner</span>
 				</div>
 			</div></li>
-			<li class="slidein"><div>
+			<li class="slidein preserve"><div>
 				<strike class="z2 delay0">productivity<b>.</b></strike>
 			</div></li>
-			<li class="slidein"><div>
+			<li class="slidein preserve"><div>
 				<span class="z2 delay0">lifestyle<b>.</b></span>
 			</div></li>
-			<li class="slidein"><div>
+			<li class="slidein preserve"><div>
 				<span class="z2 delay0">culture<b>.</b></span>
 			</div></li>
 			<li data-on-leave="video_leave" class="slidein fadein"><div>
@@ -236,10 +236,10 @@
 				</p>
 				<span class="x delay3">@csupnig (Christopher Supnig)</span>
 			</div></li>
-			<li class="dark fadein"><div>
+			<li class="dark fadein slidein"><div>
 				<div>
-					<span class="x delay0">Dream big.</span>
-					<span class="x delay2">Think small.</span>
+					<span class="z1 delay0">Dream big.</span>
+					<span class="z2 delay2">Think small.</span>
 				</div>
 				<span class="x delay3">@petrosalema</span>
 			</div></li>
