--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<div class="centered"><div>
-		<video type="video/mov" autoplay="true" loop="true" class="cover" src="waves.mov">
-			<source type="video/mov" src="waves.mov">
+		<video type="video/webm" autoplay="true" loop="true" class="cover" src="waves.webm">
+			<source type="video/webm" src="waves.webm">
 		</video>
 		<h1>@petrosalema</h1>
 		<div class="links fg">
@@ -72,9 +72,11 @@
 		<div id="talks" class="fg">
 			A Web Beyond Touch
 			(<b><a href="a-web-beyond-touch/slides.html">Slides</a></b>,
+			<b><a href="https://github.com/petrosalema/a-web-beyond-touch">GitHub</a></b>,
 			<b><a href="http://www.youtube.com/watch?v=eYPwE5ZDVc0">Video</a></b>)
 			<br/>
-			Dream Big. Think Small. (<b><a href="dream-big-think-small/slides.html">Slides</a></b>)
+			Dream Big. Think Small. (<b><a href="dream-big-think-small/slides.html">Slides</a></b>,
+			<b><a href="https://github.com/petrosalema/dream-big-think-small">GitHub</a></b>)
 		</div>
 
 	</div>
