--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="centered"><div>
-		<video type="video/webm" autoplay="true" loop="true" class="cover" src="waves.webm">
+		<video autoplay="true" preload="auto" loop="true" class="cover" type="video/webm" src="waves.webm">
 			<source type="video/webm" src="waves.webm">
 		</video>
 		<h1>@petrosalema</h1>
