Try to fix filter issues

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link
-	href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,900'
+	href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900'
 	rel='stylesheet' type='text/css'>
 	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
 	<div class="centered"><div>
-		<video autoplay="true" preload="auto" loop="true" class="cover" type="video/webm" src="waves.webm">
-			<source type="video/webm" src="waves.webm">
+		<video autoplay="true" preload="auto" loop="true" class="cover" type="video/webm" src="http://petrosalema.com/waves.webm">
+			<source type="video/webm" src="http://petrosalema.com/waves.webm">
 		</video>
 		<h1>@petrosalema</h1>
 		<div class="links fg">
