Add video for "Dream Big, Think Small"

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 		<div id="talks" class="fg">
 			A Web Beyond Touch
 			(<b><a href="a-web-beyond-touch/slides.html">Slides</a></b>,
-			<b><a href="https://github.com/petrosalema/a-web-beyond-touch">GitHub</a></b>,
-			<b><a href="http://www.youtube.com/watch?v=eYPwE5ZDVc0">Video</a></b>)
+			<b><a href="http://www.youtube.com/watch?v=eYPwE5ZDVc0">Video</a></b>,
+			<b><a href="https://github.com/petrosalema/a-web-beyond-touch">GitHub</a></b>)
 			<br/>
 			Dream Big. Think Small. (<b><a href="dream-big-think-small/slides.html">Slides</a></b>,
+			<b><a href="http://vimeo.com/110574629">Video</a></b>,
 			<b><a href="https://github.com/petrosalema/dream-big-think-small">GitHub</a></b>)
 		</div>
 
