--- a/a-web-beyond-touch/slides.html
+++ b/a-web-beyond-touch/slides.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>A Web Beyond Touch &bull Petro Salema</title>
+		<title>A Web Beyond Touch ― @petrosalema</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,900' rel='stylesheet' type='text/css'>
 	</head>
