--- a/dream-big-think-small/slides.html
+++ b/dream-big-think-small/slides.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Dream Big. Think Small. ― @petrosalem</title>
+		<title>Dream Big. Think Small. ― @petrosalema</title>
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body>
