Add talks links

--- a/index.html
+++ b/index.html
@@ -70,17 +70,29 @@
 		</div>
 
 		<div id="talks" class="fg">
-			Interfaces that Think. (<b><a href="interfaces-that-think/slides.html">Slides</a></b>,
-			<b><a href="https://github.com/petrosalema/interfaces-that-think">GitHub</a></b>)
+			Mobile Revolution in East Africa. (
+				<b><a href="mobile-east-africa/slides.html">Slides</a></b>,
+				<b><a href="https://vimeo.com/130296586">Video</a></b>,
+				<b><a href="https://github.com/petrosalema/mobile-east-africa">GitHub</a></b>
+			)
 			<br/>
-			Dream Big. Think Small. (<b><a href="dream-big-think-small/slides.html">Slides</a></b>,
-			<b><a href="http://vimeo.com/110574629">Video</a></b>,
-			<b><a href="https://github.com/petrosalema/dream-big-think-small">GitHub</a></b>)
+			Interfaces that Think. (
+				<b><a href="interfaces-that-think/slides.html">Slides</a></b>,
+				<b><a href="https://www.youtube.com/watch?v=QTp_sDjqkf4">Video</a></b>,
+				<b><a href="https://github.com/petrosalema/interfaces-that-think">GitHub</a></b>
+			)
 			<br/>
-			A Web Beyond Touch
-			(<b><a href="a-web-beyond-touch/slides.html">Slides</a></b>,
-			<b><a href="http://www.youtube.com/watch?v=eYPwE5ZDVc0">Video</a></b>,
-			<b><a href="https://github.com/petrosalema/a-web-beyond-touch">GitHub</a></b>)
+			Dream Big. Think Small. (
+				<b><a href="dream-big-think-small/slides.html">Slides</a></b>,
+				<b><a href="http://vimeo.com/110574629">Video</a></b>,
+				<b><a href="https://github.com/petrosalema/dream-big-think-small">GitHub</a></b>
+			)
+			<br/>
+			A Web Beyond Touch. (
+				<b><a href="a-web-beyond-touch/slides.html">Slides</a></b>,
+				<b><a href="http://www.youtube.com/watch?v=eYPwE5ZDVc0">Video</a></b>,
+				<b><a href="https://github.com/petrosalema/a-web-beyond-touch">GitHub</a></b>
+			)
 		</div>
 
 	</div>
