--- a/interfaces-that-think/slides.html
+++ b/interfaces-that-think/slides.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<title>Interfaces that Think: Engineering for attention. ― @petrosalema</title>
+		<meta charset="utf-8">
+		<meta name="description" content="A talk on the need to extrapolate new models and metaphors of interaction in a world of burgeoning features and signals">
+
 		<link rel="stylesheet" href="style.css" type="text/css" />
 	</head>
 	<body oncontextmenu="return false;">
