--- a/_/index.html
+++ b/_/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="shortcut icon" type="imgage/x-icon" href="static/favicon.ico" />
 		<link rel="icon" type="image/png" href="static/favicon.png" />
-		<link rel="stylesheet" type="text/css"
+		<xlink rel="stylesheet" type="text/css"
 		      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Open+Sans:300,700">
 		<!-- inject:css -->
 		<!-- endinject -->
@@ -18,17 +18,72 @@
 					<h1>Petro<br/>Salema</h1>
 					<h3>Designer &middot; Programmer &middot; Speaker</h3>
 					<div>
-						On a mission for beauty, innovation and truth, with
-						wonderful people<b>.</b>
+						On a mission for beauty, innovation and truth, together
+						with wonderful people<b>.</b>
+					</div>
+
+					<div id="connect-icons">
+						<a class="twitter social-link" href="https://twitter.com/petrosalema" title="Twitter" target="_blank">
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+								<path d="M16,3.536c-0.589,0.261-1.221,0.438-1.885,0.517c0.678-0.406,1.198-1.05,1.443-1.816c-0.634,0.376-1.337,0.649-2.085,0.797
+									c-0.599-0.638-1.452-1.037-2.396-1.037c-1.813,0-3.283,1.47-3.283,3.282c0,0.257,0.029,0.508,0.085,0.748
+									c-2.728-0.137-5.147-1.444-6.766-3.43c-0.283,0.485-0.444,1.049-0.444,1.65c0,1.139,0.579,2.144,1.46,2.732
+									C1.592,6.963,1.086,6.816,0.643,6.57c0,0.014,0,0.027,0,0.041c0,1.59,1.132,2.917,2.633,3.219C3,9.905,2.71,9.945,2.411,9.945
+									c-0.212,0-0.417-0.021-0.618-0.059c0.418,1.304,1.63,2.253,3.066,2.28c-1.123,0.88-2.539,1.405-4.077,1.405
+									c-0.265,0-0.526-0.016-0.783-0.046C1.453,14.456,3.178,15,5.032,15c6.038,0,9.34-5.002,9.34-9.34c0-0.142-0.003-0.284-0.01-0.425
+									C15.003,4.773,15.56,4.195,16,3.536z"></path>
+							</svg>
+						</a>
+
+						<a href="https://github.com/petrosalema">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0
+							857.143 1000" preserveAspectRatio="xMinYMin meet"
+							style="width: 30px">
+								<path d="M857.088 500.032q0 140.058 -81.747 251.937t-211.203 154.845q-15.066 2.79 -22.041 -3.906t-6.975 -16.74v-117.738q0 -54.126 -29.016 -79.236 31.806 -3.348 57.195 -10.044t52.452 -21.762 45.198 -37.107 29.574 -58.59 11.439 -83.979q0 -67.518 -44.082 -114.948 20.646 -50.778 -4.464 -113.832 -15.624 -5.022 -45.198 6.138t-51.336 24.552l-21.204 13.392q-51.894 -14.508 -107.136 -14.508t-107.136 14.508q-8.928 -6.138 -23.715 -15.066t-46.593 -21.483 -47.988 -7.533q-24.552 63.054 -3.906 113.832 -44.082 47.43 -44.082 114.948 0 47.43 11.439 83.7t29.295 58.59 44.919 37.386 52.452 21.762 57.195 10.044q-22.32 20.088 -27.342 57.474 -11.718 5.58 -25.11 8.37t-31.806 2.79 -36.549 -11.997 -30.969 -34.875q-10.602 -17.856 -27.063 -29.016t-27.621 -13.392l-11.16 -1.674q-11.718 0 -16.182 2.511t-2.79 6.417 5.022 7.812 7.254 6.696l3.906 2.79q12.276 5.58 24.273 21.204t17.577 28.458l5.58 12.834q7.254 21.204 24.552 34.317t37.386 16.74 38.781 3.906 30.969 -1.953l12.834 -2.232q0 21.204 .279 49.662t.279 30.132q0 10.044 -7.254 16.74t-22.32 3.906q-129.456 -42.966 -211.203 -154.845t-81.747 -251.937q0 -116.622 57.474 -215.109t155.961 -155.961 215.109 -57.474 215.109 57.474 155.961 155.961 57.474 215.109z"></path>
+							</svg>
+						</a>
+
+						<a href="#">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								viewBox="0 0 100 100"
+								preserveAspectRatio="xMinYMin meet"
+								style="width: 34px">
+							<g>
+								<path d="M75.46,49.16h0.003v-0.098c0-0.006,0-0.013,0-0.019h0V34.787c0-2.088-1.693-3.781-3.782-3.781
+									c-2.088,0-3.783,1.693-3.783,3.781v14.256c0,9.885-8.013,17.897-17.898,17.897s-17.898-8.013-17.898-17.897h0V34.787
+									c0-2.088-1.693-3.781-3.782-3.781c-2.088,0-3.783,1.693-3.783,3.781V49.16h0.003c0.058,12.724,9.447,23.243,21.678,25.065v5.438
+									H32.839v0.003c-2.074,0.018-3.75,1.701-3.75,3.779c0,2.078,1.676,3.761,3.75,3.779v0.003h34.29l0,0
+									c2.089,0,3.782-1.693,3.782-3.782c0-2.089-1.693-3.782-3.782-3.782l0,0H53.782v-5.438C66.013,72.403,75.403,61.884,75.46,49.16z"></path>
+								<path d="M37.186,48.941c0,7.088,5.745,12.833,12.833,12.833c7.087,0,12.831-5.746,12.831-12.833
+									c0-0.096-0.012-0.188-0.014-0.283h0.053V25.322h-0.053c-0.153-6.955-5.826-12.549-12.817-12.549
+									c-6.992,0-12.666,5.594-12.819,12.549h-0.052v23.336h0.052C37.199,48.753,37.186,48.845,37.186,48.941z"></path>
+							</g>
+							</svg>
+						</a>
+
+						<!--
+						<a href="https://github.com/petrosalema">
+							<svg version="1.1" viewBox="0 0 36 30" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+								<path d="M24.553168,1.00112538 C24.6869803,0.9934269 24.8377258,1.02506273 24.9968754,1.10107038 L26.0660323,1.61165253 L25.0275381,1.11680179 C24.8778077,1.04545405 24.7159477,1.00790731 24.553168,1.00112538 L24.553168,1.00112538 Z M24.0308286,24.9960601 L34.0062491,29.7603465 C35.1073527,30.2860541 36,29.9180588 36,28.9382713 L36,6.50895833 C36,6.49222699 35.998221,6.47573691 35.9947983,6.45969612 C35.9914996,6.47061737 35.9866022,6.48131582 35.9800213,6.49150721 L24.0308286,24.9960601 L24.0308286,24.9960601 Z" fill-opacity="0.28"></path>
+								<path d="M12.0939236,19.1229699 L12,19.2684268 L22.8777715,24.4517715 L12.1491499,19.2106494 L12.0939236,19.1229699 L12.0939236,19.1229699 Z M16.2471914,12.6909186 L23.4428003,1.54727771 C23.764851,1.04845142 24.4779141,0.854901558 25.0275381,1.11680179 L35.9255417,6.30978722 C35.9962273,6.3433052 36.0213983,6.42742873 35.9800213,6.49150721 L24.0282844,25 L23.9878709,24.9807426 L16.2471914,12.6909186 L16.2471914,12.6909186 Z" fill-opacity="0.55"></path>
+								<path d="M1.78645093,1.127037 C1.83515997,1.14765479 1.88596406,1.17085254 1.93881568,1.19668121 L6.66069372,3.50340242 L1.78645093,1.127037 Z M12,18.973853 L12.1491499,19.2106494 L24,25 L12.174629,6.22493896 C12.1579827,6.19838535 12.1338624,6.17714246 12.1053258,6.16320182 L11.9635138,6.09392413 C11.9864251,6.11471382 12,6.1437837 12,6.17498779 L12,18.973853 Z" fill-opacity="0.77"></path>
+								<path d="M10.3385409,29.8313781 L0.996875448,25.363985 C0.448559553,25.1017778 0,24.407603 0,23.8213378 L0,1.92061678 C0,1.13892991 0.868269966,0.686047265 1.59924316,1.0357666 L11.9353304,6.07497398 C11.9748889,6.09405557 12,6.13254772 12,6.17498779 L12,28.8493347 C12,29.8264432 11.2521714,30.2682806 10.3385409,29.8313781 Z"></path>
+							</svg>
+						</a>
+						-->
 					</div>
 				</div>
 			</header>
 			<section class="centered">
 				<div>
 					<div>
-						<h2>Bend the Fish While it is Still Wet</h2>
-						<h3>How East Aftrica Leap-frogged the world in mobile
-							fin-tech &middot; <span>10 MIN READ</span>
+						<a href="#">
+							<h2>Bend the Fish While it is Still Wet</h2>
+						</a>
+						<h3>
+							How East Aftrica Leap-frogged the world in mobile
+							fin-tech &middot; <a href="#">10 MIN READ</a>
 						</h3>
 					</div>
 				</div>
