Setting up development structure

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="shortcut icon" type="imgage/x-icon" href="static/favicon.ico" />
 		<link rel="icon" type="image/png" href="static/favicon.png" />
-		<xlink rel="stylesheet" type="text/css"
+		<link rel="stylesheet" type="text/css"
 		      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Open+Sans:300,700">
 		<!-- inject:css -->
-		<link rel="stylesheet" href="styles.css">
 		<!-- endinject -->
 	</head>
 	<body>
@@ -92,6 +91,5 @@
 		</article>
 		<!-- inject:js -->
 		<!-- endinject -->
-		<script src="//localhost:35729/livereload.js"></script>
 	</body>
 </html>
