--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: base
   <article class="centered">
     <div>
       <div>
-        <a href="#">
+        <a href="/talks/bend-the-fish-while-it-is-still-wet">
           <h2>Bend the Fish While it is Still Wet</h2>
         </a>
         <h3>
