Make design more responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ layout: base
         </a>
         <h3>
           How East Aftrica Leap-frogged the world in mobile
-          fin-tech &middot; <a href="#">10 MIN READ</a>
+          fin-tech &middot; <a
+            href="/talks/bend-the-fish-while-it-is-still-wet">WATCH THE TALK</a>
         </h3>
       </div>
     </div>
