--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@ layout: base
         <a href="/talks/bend-the-fish-while-it-is-still-wet">
           <h2>Bend the Fish While it is Still Wet</h2>
         </a>
-        <h3>
-          How East Aftrica Leap-frogged the world in mobile
-          fin-tech &middot; <a
-            href="/talks/bend-the-fish-while-it-is-still-wet">WATCH THE TALK</a>
-        </h3>
+        <h4>
+          How East Aftrica Leap-frogged the world in mobile fin-tech &middot;
+          <a href="/talks/bend-the-fish-while-it-is-still-wet">WATCH THE TALK</a>
+        </h4>
       </div>
     </div>
   </article>
@@ -28,9 +27,15 @@ layout: base
 
 <section id="about" class="centered">
   <div>
-    My name is Petro Salema. I partner with companies that are working to make a
-    difference&mdash;using, software and design to bring the promises of
-    tomorrow into the possibilities of today<b>.</b>
+    <p>
+      My name is Petro Salema<b>.</b><br/>
+      I help companies <a href="/work">launch apps<b>.</b></a>
+    </p>
+    <p>
+      The <a href="/work">companies</a> I work with are working to make a
+      difference&mdash;using, software and design to bring the promises of
+      tomorrow into the possibilities of today<b>.</b>
+    </p>
   </div>
 </section>
 
