Adding to about

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@ layout: base
       I help companies <a href="/work">launch apps<b>.</b></a>
     </p>
     <p>
+      I bring expertise in JavasScript, design, and product-thinking to elevate
+      the performance of your team.
+    </p>
+    
+    <p>
+      It's much more than about writing code, it's about delivering awesomeness
+      to your users and differeniating yourself in crowded market.
+    </p>
+    <p>
       The <a href="/work">companies</a> I work with are working to make a
       difference&mdash;using, software and design to bring the promises of
       tomorrow into the possibilities of today<b>.</b>
