--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: base
   <header>
     <div>
       <h1>petro<br/>salema<b>.</b></h1>
-      <h3>React (Native) &amp; Angular expert<b>.</b></h3>
-      <h4>I help companies get from vision to version 1.0<b>.</b></h4>
+      <h3>React (Native) &amp; Angular expert</h3>
+      <h4>I help companies get from vision to version 1.0</h4>
     </div>
   </header>
   <article class="centered">
@@ -29,27 +29,22 @@ layout: base
   <div>
     <p>
       My name is Petro Salema<b>.</b><br/>
-      I help companies <a href="/work">launch apps<b>.</b></a>
+      I help companies launch <a href="/work">amazing apps<b>.</b></a>
     </p>
     <p>
-      I bring expertise in JavasScript, design, and product-thinking to elevate
-      the performance of your team.
-    </p>
-    
-    <p>
-      It's much more than about writing code, it's about delivering awesomeness
-      to your users and differeniating yourself in crowded market.
+      The teams I work with are vested in making a difference&mdash;using
+      software and design and product-thinking to bring the promises of tomorrow
+      into the possibilities of today<b>.</b>
     </p>
     <p>
-      The <a href="/work">companies</a> I work with are working to make a
-      difference&mdash;using, software and design to bring the promises of
-      tomorrow into the possibilities of today<b>.</b>
+      <a href="/about">Want to know more?</a>
     </p>
   </div>
 </section>
 
 <ul class="posts">
   <li class="title-card">
+    <canvas></canvas>
     talks<b>.</b>
   </li>
 {% for post in site.posts %}
@@ -64,4 +59,3 @@ layout: base
   </li>
 {% endfor %}
 </ul>
-
