--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: base
     <p>
       The teams I work with are vested in making a difference&mdash;using
       software and design and product-thinking to bring the promises of tomorrow
-      into the possibilities of today<b>.</b>
+      to the possibilities of today<b>.</b>
     </p>
     <p>
       <a href="/about">Want to know more?</a>
