--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: base
       to the possibilities of today<b>.</b>
     </p>
     <p>
-      <a href="/about">Want to know more?</a>
+      <a href="/about">Read more...</a>
     </p>
   </div>
 </section>
