--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@ layout: base
 
 <section id="about" class="centered">
   <div>
-    <p>
-      My name is Petro Salema<b>.</b><br/>
-      I help companies launch <a href="/work">amazing apps<b>.</b></a>
-    </p>
+    <p>My name is Petro Salema<b>.</b></p>
+    <p>I help companies launch <a href="/work">amazing apps<b>.</b></a></p>
     <p>
       The teams I work with are vested in making a difference&mdash;using
       software and design and product-thinking to bring the promises of tomorrow
