--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: base
     <div>
       <h1>petro<br/>salema<b>.</b></h1>
       <h3>React (Native) &amp; Angular expert</h3>
-      <h4>I help companies get from vision to version 1.0</h4>
+      <h4>Helping companies get from vision to version 1.0</h4>
     </div>
   </header>
   <article class="centered">
