Fix typo (finally)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: base
           <h2>Bend the Fish While it is Still Wet</h2>
         </a>
         <h4>
-          How East Aftrica Leap-frogged the world in mobile fin-tech &middot;
+          How East Africa Leap-frogged the world in mobile fin-tech &middot;
           <a href="/talks/bend-the-fish-while-it-is-still-wet">WATCH THE TALK</a>
         </h4>
       </div>
